(Trello ID: 8rzOOkbl) filter to authenticate admin when adding categories (WIP)
