# src/api/src/docs/swagger.json
@@ -1,13 +1,8 @@
 {
 	"definitions": {
-		"AuthProfessionalUser": {
+		"IAuthProfessionalUser": {
 			"description": "",
 			"properties": {
-				"id": {
-					"type": "number",
-					"format": "double",
-					"description": ""
-				},
 				"email": {
 					"type": "string",
 					"description": ""
@@ -75,7 +70,6 @@
 			},
 			"type": "object",
 			"required": [
-				"id",
 				"email",
 				"password",
 				"name",
@@ -202,14 +196,13 @@
 			"post": {
 				"operationId": "AuthPost",
 				"produces": [
-					"text/html",
-					"application/json"
+					"text/html"
 				],
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"schema": {
-							"type": "object"
+							"type": "string"
 						}
 					},
 					"201": {
@@ -245,13 +238,13 @@
 						"name": "authUser",
 						"required": true,
 						"schema": {
-							"$ref": "#/definitions/AuthProfessionalUser"
+							"$ref": "#/definitions/IAuthProfessionalUser"
 						}
 					}
 				]
 			}
 		},
-		"/api/categories": {
+		"/api/categories/": {
 			"get": {
 				"operationId": "CategoriesGet",
 				"produces": [
@@ -280,6 +273,54 @@
 					"Categories"
 				],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "CategoriesPost",
+				"produces": [
+					"text/html"
+				],
+				"responses": {
+					"201": {
+						"description": "Created category",
+						"schema": {
+							"type": "string"
+						}
+					},
+					"204": {
+						"description": "No content"
+					},
+					"500": {
+						"description": "Server error",
+						"schema": {
+							"type": "string"
+						}
+					}
+				},
+				"description": "",
+				"tags": [
+					"Admin"
+				],
+				"security": [
+					{
+						"default": [
+							"x-auth"
+						]
+					}
+				],
+				"consumes": [
+					"application/json"
+				],
+				"parameters": [
+					{
+						"description": "",
+						"in": "body",
+						"name": "category",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/ICategory"
+						}
+					}
+				]
 			}
 		},
 		"/api/professional_user": {
