# src/api/src/service/Admin.service.ts
@@ -1,0 +1,13 @@
+import { DependencyLifeTime, Injectable } from "@miracledevs/paradigm-web-di";
+import { ICategory } from "../models/categories/Category.interface";
+import { CategoryRepository } from "../repositories/Categories.repository";
+
+@Injectable({ lifeTime: DependencyLifeTime.Scoped })
+export class AdminService {
+    constructor(private repo: CategoryRepository) {}
+
+    async insertCategory(category: ICategory) {
+        await this.repo.insertOne(category);
+    }
+}
+
